src/styles/styles.css
body {
  margin: 0;
  padding: 0;
  text-align: left;
  font-family: sans-serif;
}

h1, h2, h3, h4, h5, h6, a{
  font-family: 'Merriweather Sans', sans-serif;
  color: red;
}

h4, p, .form-group{
  padding-top: 1rem;
}

label {
  text-align: left;
  width: 100%;
  max-width: 500px;
  color: #847878;
  font-weight: bold;
}

@keyframes entrance {
  0% {opacity: 0;}
  100% {opacity: 1;}
}

@keyframes logo {
  0% { opacity: 0; max-height: 75vh; }
  50% { opacity: 1; max-height: 75vh; }
  100% { opacity: 1; max-height: 250px; }
}

@keyframes fade {
  0% {opacity: 1; height: 100vh; width: 100vw;}
  50% {opacity: 1; height: 100vh; width: 100vw;}
  99% {height: 100vh; width: 100vw;}
  100% {opacity: 0; height: 0px; width: 0px; }
}

.component{
  animation-name: entrance;
  animation-duration: .1s;
}

.fade{
  top: 0px;
  left: 0px;
  z-index: 2;
  position: fixed;
  opacity: 0;
  animation-name: fade !important;
  animation-duration: 1.5s;
  background-color: white;
}

.iwwlogo{
  position: relative;
  z-index: 3;
  opacity: 1;
  animation-name: logo !important;
  animation-duration: .75s;
  max-height: 250px;
  margin-bottom: 20px;
}

.navlinks a{
  padding: .375rem .75rem;
  display: inline-block;
}

.navlinks a:hover{
  text-decoration: none;
  color: red;
}

.poster_holder a{
  text-decoration: none;
}

.poster_holder h5{
  color: #847878;
}

.poster_holder h5:hover{
  color: red;
}

.body{
  margin: 10px 5%;
}

.body > div {
  text-align: center;
  max-width: 700px;
  margin: 0 auto;
  padding: 0px 10px;
}

iframe{
  margin: 0px -10px;
  padding-top: 1rem;
}

.Header{
  border-bottom: 3px solid #847878;
  text-align: center;
}

.Footer{
  padding: 20px 0;
  color: #847878;
  font-size: 0.8rem;
  text-align: center;
}

.header_link{
  color: #847878;
}

.active_header_link{
  color: red !important;
  font-weight: bold;
}

.leftaligned{
  text-align: left;
}

.gdcfirstpara{
  display: flex;
  flex-direction: row;
}

.modalbutton{
  display: none;
}

.header_logo_title{
  border-radius: 0px 0px 100vh 175px;
}
.title_of_page{
  padding: 0 10%;
  position: relative;
  color: #847878;
  font-size: 1.3rem;
}

/*BELOW IS CURVE*/
.curveholder{
  height: 1px;
}
.curveholder svg{
  width: 100%;
  transform: translateY(-100%);
}

@media (max-width: 640px) {
  .header_logo_title{
    margin-bottom: 15px;
  }

  .imgtest{
    margin: 0 auto;
  }

  .gdcfirstpara{
    flex-direction: column;
  }

  .body{
    margin: 10px 0%;
  }

  .hiddenmodal{
    margin-left: -200px;
  }

  .shownmodal{
    /*z-index: 5;*/
  }

  .navlinks {
    -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    -moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    transition: all 0.2s;
    position: fixed;
    left: 0;
    z-index: 100;
    top: 0;
    width: 200px;
    border-radius: 0 0 10px 0;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
  }

  .navlinks a{
    width: 100%;
    color: black;
    border-bottom: 1px solid #847878;
  }

  .modalbutton{
    -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    -moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.21);
    border-radius: 0 10px 10px 0;
    padding: 30px 10px;
    transition: all 0.2s;
    display: block;
    position: fixed;
    top: 0;
    left: 200px;
    z-index: 99;
    font-size: 30px;
    color: white;
    background-color: red;
    width: 30px;
  }

  .openmodalbackground{
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    position: fixed;
    z-index: 90;
  }

  .smallarrowleft {
    transition: all 0.2s;
    z-index: 100;
    position: fixed;
    top: 10px;
    left: 210px;
  	width: 0;
  	height: 0;
  	border-top: 20px solid transparent;
  	border-right: 10px solid white;
  	border-bottom: 20px solid transparent;
  }
  .smallarrowright {
    transition: all 0.2s;
    z-index: 100;
    position: fixed;
    top: 10px;
    left: 10px;
  	width: 0;
  	height: 0;
  	border-bottom: 20px solid transparent;
  	border-left: 10px solid white;
  	border-top: 20px solid transparent;
  }
}

